--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "testing-lucia-auth",
+  "name": "v2",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,16 +13,12 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "lucia": "^3.2.0",
-    "mongodb": "^6.8.0",
-    "mongoose": "^8.5.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "eslint-config-next": "14.2.5"
   }
 }
